# rust-riscv

./: .gitignore  Cargo.toml
src/: core.rs  lib.rs  main.rs
src/core/: branch_manager.rs  csr.rs  memory.rs  mod.rs  reg.rs
src/test/: instruction.rs  mod.rs
src/util/: bitwise.rs  exception.rs  instruction.rs  mod.rs  status.rs
src/util/bitwise/: mod.rs
src/util/instruction/: encoding_type.rs  mod.rs
