[package]
name = "rust-riscv"
version = "0.1.0"
authors = ["SoyaOhnishi <soya.ohnishi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2"
bitwise = { git = "https://github.com/Soya-Onishi/rust-riscv" }

[dev-dependencies]
rand = "0.7"